logs/win/editor_app.log
In file included from ../../src/editor_src/../GameCamera.h:4:0,
                 from ../../src/editor_src/GLCanvas.h:9,
                 from ../../src/editor_src/EditorFrame.h:4,
                 from ../../src/editor_src/EditorApplication.h:11,
                 from ../../src/editor_src/EditorApplication.cpp:1:
../../src/editor_src/../vec2.hpp:156:8: warning: extra tokens at end of #endif directive [-Wendif-labels]
 #endif VEC2_CROSS_PRODUCT
        ^
In file included from ../../src/editor_src/GLCanvas.h:9:0,
                 from ../../src/editor_src/EditorFrame.h:4,
                 from ../../src/editor_src/EditorApplication.h:11,
                 from ../../src/editor_src/EditorApplication.cpp:1:
../../src/editor_src/../GameCamera.h: In constructor 'GameCamera::GameCamera(Vec2, Vec2, Vec2, Vec2)':
../../src/editor_src/../GameCamera.h:28:32: warning: 'GameCamera::lowerLimits' will be initialized after [-Wreorder]
   Vec2 lowerLimits=Vec2(-100000);
                                ^
../../src/editor_src/../GameCamera.h:24:8: warning:   'Vec2 GameCamera::screenResolution' [-Wreorder]
   Vec2 screenResolution;
        ^
In file included from ../../src/editor_src/GLCanvas.h:9:0,
                 from ../../src/editor_src/EditorFrame.h:4,
                 from ../../src/editor_src/EditorApplication.h:11,
                 from ../../src/editor_src/EditorApplication.cpp:1:
../../src/editor_src/../GameCamera.h:12:3: warning:   when initialized here [-Wreorder]
   GameCamera(Vec2 pos, Vec2 screenResolution, Vec2 limits, Vec2 lowerLimits) : pos(pos), limits(limits), lowerLimits(lowerLimits), screenResolution(screenResolution) {}
   ^
In file included from ../../src/editor_src/GLCanvas.h:9:0,
                 from ../../src/editor_src/EditorFrame.h:4,
                 from ../../src/editor_src/EditorApplication.h:11,
                 from ../../src/editor_src/EditorApplication.cpp:1:
../../src/editor_src/../GameCamera.h: In member function 'Vec2 GameCamera::transform(Vec2)':
../../src/editor_src/../GameCamera.h:17:88: warning: no return statement in function returning non-void [-Wreturn-type]
   inline Vec2 transform( Vec2 offset ) { pos.x() += offset.x(); pos.y() += offset.y(); }
                                                                                        ^
In file included from ../../src/editor_src/../LightShader.h:5:0,
                 from ../../src/editor_src/GLCanvas.h:12,
                 from ../../src/editor_src/EditorFrame.h:4,
                 from ../../src/editor_src/EditorApplication.h:11,
                 from ../../src/editor_src/EditorApplication.cpp:1:
../../src/editor_src/../ShaderUniform.h: In member function 'bool ShaderUniform::is_valid()':
../../src/editor_src/../ShaderUniform.h:48:33: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
   bool is_valid() { return (obj != -1); } 
                                 ^
In file included from ../../src/editor_src/../Progressor.h:3:0,
                 from ../../src/editor_src/../Player.h:5,
                 from ../../src/editor_src/../Level.h:6,
                 from ../../src/editor_src/GLCanvas.h:14,
                 from ../../src/editor_src/EditorFrame.h:4,
                 from ../../src/editor_src/EditorApplication.h:11,
                 from ../../src/editor_src/EditorApplication.cpp:1:
../../src/editor_src/../Entity.h: In constructor 'Entity::Entity(Vec2, Vec2, Vec2, Vec4)':
../../src/editor_src/../Entity.h:77:8: warning: 'Entity::size' will be initialized after [-Wreorder]
   Vec2 size;
        ^
../../src/editor_src/../Entity.h:76:8: warning:   'Vec2 Entity::velocity' [-Wreorder]
   Vec2 velocity;
        ^
../../src/editor_src/../Entity.h:31:3: warning:   when initialized here [-Wreorder]
   Entity(Vec2 pos, Vec2 size, Vec2 velocity, Vec4 color)
   ^
../../src/editor_src/../Entity.h: In member function 'virtual bool Entity::DeathAnimation(float)':
../../src/editor_src/../Entity.h:67:3: warning: no return statement in function returning non-void [-Wreturn-type]
   }
   ^
In file included from ../../src/editor_src/../Player.h:10:0,
                 from ../../src/editor_src/../Level.h:6,
                 from ../../src/editor_src/GLCanvas.h:14,
                 from ../../src/editor_src/EditorFrame.h:4,
                 from ../../src/editor_src/EditorApplication.h:11,
                 from ../../src/editor_src/EditorApplication.cpp:1:
../../src/editor_src/../Block.h: At global scope:
../../src/editor_src/../Block.h:173:2: error: 'protect' does not name a type
  protect:
  ^
../../src/editor_src/../Block.h: In member function 'virtual Vec4 Block::getUvs()':
../../src/editor_src/../Block.h:118:11: error: 'type' was not declared in this scope
    switch(type){
           ^
../../src/editor_src/../Block.h: In constructor 'Block::Block(Vec2, Vec2, Vec4, int)':
../../src/editor_src/../Block.h:171:41: error: class 'Block' does not have any field named 'type'
    : Entity(pos, size, Vec2(0), color), type(type){
                                         ^
In file included from ../../src/editor_src/../EntityManager.h:8:0,
                 from ../../src/editor_src/../Level.h:8,
                 from ../../src/editor_src/GLCanvas.h:14,
                 from ../../src/editor_src/EditorFrame.h:4,
                 from ../../src/editor_src/EditorApplication.h:11,
                 from ../../src/editor_src/EditorApplication.cpp:1:
../../src/editor_src/../BackgroundSprites.h: In member function 'virtual Vec4 BackgroundBlock::getUvs()':
../../src/editor_src/../BackgroundSprites.h:18:11: error: 'type' was not declared in this scope
    switch(type){
           ^
../../src/editor_src/../BackgroundSprites.h: In constructor 'BackgroundBlock::BackgroundBlock()':
../../src/editor_src/../BackgroundSprites.h:68:20: error: no matching function for call to 'Block::Block()'
   BackgroundBlock(){}
                    ^
In file included from ../../src/editor_src/../Player.h:10:0,
                 from ../../src/editor_src/../Level.h:6,
                 from ../../src/editor_src/GLCanvas.h:14,
                 from ../../src/editor_src/EditorFrame.h:4,
                 from ../../src/editor_src/EditorApplication.h:11,
                 from ../../src/editor_src/EditorApplication.cpp:1:
../../src/editor_src/../Block.h:170:3: note: candidate: Block::Block(Vec2, Vec2, Vec4, int)
   Block(Vec2 pos, Vec2 size, Vec4 color=Vec4(0.2), int type = BlockTypes::Floor)
   ^
../../src/editor_src/../Block.h:170:3: note:   candidate expects 4 arguments, 0 provided
../../src/editor_src/../Block.h:169:3: note: candidate: constexpr Block::Block(const Block&)
   Block(const Block& other) = default;
   ^
../../src/editor_src/../Block.h:169:3: note:   candidate expects 1 argument, 0 provided
In file included from ../../src/editor_src/../EntityManager.h:8:0,
                 from ../../src/editor_src/../Level.h:8,
                 from ../../src/editor_src/GLCanvas.h:14,
                 from ../../src/editor_src/EditorFrame.h:4,
                 from ../../src/editor_src/EditorApplication.h:11,
                 from ../../src/editor_src/EditorApplication.cpp:1:
../../src/editor_src/../BackgroundSprites.h: In member function 'virtual Vec4 BackgroundBlockStatic::getUvs()':
../../src/editor_src/../BackgroundSprites.h:79:11: error: 'type' was not declared in this scope
    switch(type){
           ^
../../src/editor_src/../BackgroundSprites.h: In constructor 'BackgroundBlockStatic::BackgroundBlockStatic()':
../../src/editor_src/../BackgroundSprites.h:129:26: error: no matching function for call to 'Block::Block()'
   BackgroundBlockStatic(){}
                          ^
In file included from ../../src/editor_src/../Player.h:10:0,
                 from ../../src/editor_src/../Level.h:6,
                 from ../../src/editor_src/GLCanvas.h:14,
                 from ../../src/editor_src/EditorFrame.h:4,
                 from ../../src/editor_src/EditorApplication.h:11,
                 from ../../src/editor_src/EditorApplication.cpp:1:
../../src/editor_src/../Block.h:170:3: note: candidate: Block::Block(Vec2, Vec2, Vec4, int)
   Block(Vec2 pos, Vec2 size, Vec4 color=Vec4(0.2), int type = BlockTypes::Floor)
   ^
../../src/editor_src/../Block.h:170:3: note:   candidate expects 4 arguments, 0 provided
../../src/editor_src/../Block.h:169:3: note: candidate: constexpr Block::Block(const Block&)
   Block(const Block& other) = default;
   ^
../../src/editor_src/../Block.h:169:3: note:   candidate expects 1 argument, 0 provided
